// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cdktf synth load-balancer — services/NEGs/backends and mode behavior snapshot — dev overlay (create IP + managed cert + services) 1`] = `
"# Synthesized by brat CDKTF synth (module: load-balancer)
# This file was generated to provision the BitBrat Load Balancer infrastructure.
# module: load-balancer

terraform {
  required_version = ">= 1.5.0"
  required_providers {
    google = {
      source  = "hashicorp/google"
      version = ">= 5.0.0"
    }
  }
}

provider "google" {
  project = var.project_id
  region  = var.region
}

variable "project_id" {
  type    = string
  default = "p-dev"
}

variable "region" {
  type    = string
  default = "us-central1"
}

variable "environment" {
  type    = string
  default = "dev"
}



resource "google_compute_global_address" "main-load-balancer_ip" {
  name = "dev-ip"
}

resource "google_compute_managed_ssl_certificate" "main-load-balancer_cert" {
  name = "bitbrat-dev-cert"
  managed {
    domains = ["api.bitbrat.ai"]
  }
}

resource "google_compute_region_network_endpoint_group" "neg-web-us-central1" {
  name                 = "neg-web-us-central1"
  network_endpoint_type = "SERVERLESS"
  region               = "us-central1"
  cloud_run {
    service = "web"
  }
}

resource "google_compute_backend_service" "be-web-external" {
  name                  = "be-web-external"
  protocol              = "HTTP"
  load_balancing_scheme = "EXTERNAL_MANAGED"
  log_config { enable = true }
  backend {
    group = google_compute_region_network_endpoint_group.neg-web-us-central1.id
  }
}

resource "google_compute_url_map" "main-load-balancer" {
  name            = "bitbrat-global-url-map"
  default_service = google_compute_backend_service.be-web-external.self_link
  lifecycle {
    ignore_changes = [
      default_service,
      host_rule,
      path_matcher,
      test,
    ]
  }
}

resource "google_compute_target_https_proxy" "main-load-balancer_proxy" {
  name             = "main-load-balancer-https-proxy-dev"
  url_map          = google_compute_url_map.main-load-balancer.self_link
  ssl_certificates = [google_compute_managed_ssl_certificate.main-load-balancer_cert.self_link]
}

resource "google_compute_global_forwarding_rule" "main-load-balancer_fr" {
  name                  = "main-load-balancer-https-fr-dev"
  ip_address            = google_compute_global_address.main-load-balancer_ip.address
  port_range            = "443"
  load_balancing_scheme = "EXTERNAL_MANAGED"
  target                = google_compute_target_https_proxy.main-load-balancer_proxy.self_link
}



# Outputs
output "lbIpAddresses" {
  description = "Map of load balancer key to IP address"
  value = {
    "main-load-balancer" = google_compute_global_address.main-load-balancer_ip.address
  }
}

output "backendServiceNames" {
  description = "List of all backend service names"
  value       = ["be-web-external"]
}

output "negNames" {
  description = "List of all NEG names"
  value       = ["neg-web-us-central1"]
}
"
`;

exports[`cdktf synth load-balancer — services/NEGs/backends and mode behavior snapshot — prod overlay (use-existing IP/Cert; no services) 1`] = `
"# Synthesized by brat CDKTF synth (module: load-balancer)
# This file was generated to provision the BitBrat Load Balancer infrastructure.
# module: load-balancer

terraform {
  required_version = ">= 1.5.0"
  required_providers {
    google = {
      source  = "hashicorp/google"
      version = ">= 5.0.0"
    }
  }
}

provider "google" {
  project = var.project_id
  region  = var.region
}

variable "project_id" {
  type    = string
  default = "p-prod"
}

variable "region" {
  type    = string
  default = "us-central1"
}

variable "environment" {
  type    = string
  default = "prod"
}

data "google_compute_global_address" "main-load-balancer_ip" {
  name = "prod-global-ip"
}

data "google_compute_ssl_certificate" "main-load-balancer_cert" {
  name = "prod-cert"
}

resource "google_compute_backend_service" "be-default-main-load-balancer" {
  name                  = "be-default-main-load-balancer"
  protocol              = "HTTP"
  load_balancing_scheme = "EXTERNAL_MANAGED"
  log_config { enable = true }
}

resource "google_compute_url_map" "main-load-balancer" {
  name            = "bitbrat-global-url-map"
  default_service = google_compute_backend_service.be-default-main-load-balancer.self_link
  lifecycle {
    ignore_changes = [
      default_service,
      host_rule,
      path_matcher,
      test,
    ]
  }
}

resource "google_compute_target_https_proxy" "main-load-balancer_proxy" {
  name             = "main-load-balancer-https-proxy-prod"
  url_map          = google_compute_url_map.main-load-balancer.self_link
  ssl_certificates = [data.google_compute_ssl_certificate.main-load-balancer_cert.self_link]
}

resource "google_compute_global_forwarding_rule" "main-load-balancer_fr" {
  name                  = "main-load-balancer-https-fr-prod"
  ip_address            = data.google_compute_global_address.main-load-balancer_ip.address
  port_range            = "443"
  load_balancing_scheme = "EXTERNAL_MANAGED"
  target                = google_compute_target_https_proxy.main-load-balancer_proxy.self_link
}



# Outputs
output "lbIpAddresses" {
  description = "Map of load balancer key to IP address"
  value = {
    "main-load-balancer" = data.google_compute_global_address.main-load-balancer_ip.address
  }
}

output "backendServiceNames" {
  description = "List of all backend service names"
  value       = ["be-default-main-load-balancer"]
}

output "negNames" {
  description = "List of all NEG names"
  value       = []
}
"
`;
